javaDSL/src/test/resources/typeSystemTestModels/valid/classes/ClassNoDuplicateDirectSuperInterface.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

import java.util.List;
import java.lang.String;

public class ClassNoSuperInterfaceDuplicate implements List<String> {

}
